# liftinstall

./: .gitignore  .travis.yml  Cargo.toml  README.md  bootstrap.linux.toml  bootstrap.windows.toml  build.rs  config.linux.toml  config.linux.v1.toml  config.toml  config.windows.toml  config.windows.v1.toml  config.windows.v2.toml  config.windows.v3.toml  config.windows.v4.toml
.travis/: build.sh
src/: assets.rs  config.rs  http.rs  installer.rs  logging.rs  main.rs  rest.rs
src/archives/: mod.rs
src/native/: interop.cpp  interop.h  mod.rs
src/sources/: mod.rs  types.rs
src/sources/github/: mod.rs
src/tasks/: download_pkg.rs  ensure_only_instance.rs  install.rs  install_dir.rs  install_global_shortcut.rs  install_pkg.rs  install_shortcuts.rs  mod.rs  resolver.rs  save_database.rs  save_executable.rs  uninstall.rs  uninstall_global_shortcut.rs  uninstall_pkg.rs  uninstall_shortcuts.rs
static/: index.html
static/css/: main.css
static/js/: helpers.js  main.js  views.js
